--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,63 +1,97 @@
 name: CI
+
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
-    types:
-      - opened
-      - synchronize
+  merge_group:
+  workflow_dispatch:
+
 jobs:
   formatting:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v5
       - uses: haskell-actions/run-ormolu@v17
       - uses: tfausak/cabal-gild-setup-action@v2
         with:
           version: 1.6.0.2
+
   ci-wasm:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
       matrix:
-        ghc: ['9_10', '9_12']
+        flavour:
+          - "9.14"
+          - "9.12"
+          - "9.10"
+        experimental:
+          - false
+        include:
+          - flavour: "gmp"
+            experimental: true
     steps:
       - uses: actions/checkout@v5
-      - uses: cachix/install-nix-action@v31
+
+      - run: |
+          cabal update --ignore-project
+          cabal install --ignore-project -O2 hscolour
+
+      - run: |
+          pushd "$(mktemp -d)"
+          curl -L https://gitlab.haskell.org/haskell-wasm/ghc-wasm-meta/-/archive/master/ghc-wasm-meta-master.tar.gz | tar xz --strip-components=1
+          ./setup.sh
+          ~/.ghc-wasm/add_to_github_path.sh
+          cp cabal.project.local ${{ github.workspace }}
+          popd
+        env:
+          FLAVOUR: ${{ matrix.flavour }}
+
+      - run: |
+          wasm32-wasi-cabal build jsaddle-wasm --dry-run
+
       - uses: actions/cache@v4
         with:
+          key: ci-wasm-${{ matrix.flavour }}-${{ hashFiles('dist-newstyle/cache/plan.json') }}
+          restore-keys: ci-wasm-${{ matrix.flavour }}-
           path: |
             ~/.ghc-wasm/.cabal/store
-          key: wasm-${{ github.run_id }}
-          restore-keys: |
-            wasm-${{ matrix.ghc }}-${{ github.run_id }}
-            wasm-${{ matrix.ghc }}-
-      - uses: nicknovitski/nix-develop@v1
-        with:
-          arguments: '.#"${{ matrix.ghc }}"'
-      - name: Build
-        run: |
-          mv cabal.project.ci cabal.project.local
-          wasm32-wasi-cabal update
-          wasm32-wasi-cabal build
+
+      - run: |
+          wasm32-wasi-cabal build jsaddle-wasm
+
   ci-native:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
       matrix:
-        ghc: ['9.10', '9.12']
+        flavour:
+          - "9.12"
+          - "9.10"
     steps:
       - uses: actions/checkout@v5
+
+      - run: |
+          cabal update --ignore-project
+          cabal install --ignore-project -O2 hscolour
+
       - uses: haskell-actions/setup@v2
         id: setup-haskell
         with:
-          ghc-version: ${{ matrix.ghc }}
+          ghc-version: ${{ matrix.flavour }}
+
+      - run: |
+          cabal build jsaddle-wasm --dry-run
+
       - uses: actions/cache@v4
         with:
-          path: ${{ steps.setup-haskell.outputs.cabal-store }}
-          key: ci-native-${{ github.run_id }}
-          restore-keys: |
-            ci-native-${{ matrix.ghc }}-${{ github.run_id }}
-            ci-native-${{ matrix.ghc }}-
-      - run: cabal build
+          key: ci-native-${{ matrix.flavour }}-${{ hashFiles('dist-newstyle/cache/plan.json') }}
+          restore-keys: ci-native-${{ matrix.flavour }}-
+          path: |
+            ${{ steps.setup-haskell.outputs.cabal-store }}
+
+      - run: |
+          cabal build jsaddle-wasm
