--- a/jsaddle-wasm.cabal
+++ b/jsaddle-wasm.cabal
@@ -4,17 +4,17 @@ version: 0.2.0.0
 synopsis: Run JSaddle JSM with the GHC Wasm backend
 description: Run JSaddle @JSM@ with the GHC Wasm backend.
 category: Web, Javascript
-homepage: https://github.com/amesgen/jsaddle-wasm
-bug-reports: https://github.com/amesgen/jsaddle-wasm/issues
+homepage: https://github.com/haskell-wasm/jsaddle-wasm
+bug-reports: https://github.com/haskell-wasm/jsaddle-wasm/issues
 license: CC0-1.0
 license-file: LICENSE
 extra-source-files: README.md
 author: amesgen
-maintainer: amesgen@amesgen.de
+maintainer: terrorjack@type.dance
 extra-doc-files: CHANGELOG.md
 
 source-repository head
-  location: https://github.com/amesgen/jsaddle-wasm
+  location: https://github.com/haskell-wasm/jsaddle-wasm.git
   type: git
 
 flag eval-via-jsffi
