--- a/cabal.release.project
+++ b/cabal.release.project
@@ -1,14 +1,4 @@
-packages: jsaddle/jsaddle .
-
-source-repository-package
-  type: git
-  location: https://github.com/haskell-miso/miso-todomvc.git
-
-source-repository-package
-  type: git
-  location: https://github.com/dmjio/miso.git
-
-tests: True
+import: cabal.common.project
 
 package *
   optimization: 2
@@ -29,5 +19,3 @@ package aeson
 
 package vector
   flags: -boundschecks
-
-allow-newer: all:jsaddle-wasm
