--- a/jsaddle-wasm.cabal
+++ b/jsaddle-wasm.cabal
@@ -63,7 +63,9 @@ library
       aeson >=2 && <2.3,
       ghc-experimental ^>=0.1 || >=9.1000 && <9.1700,
       parser-regex ^>=0.3,
+      primitive ^>=0.9.1.0,
       stm ^>=2.5,
+      text ^>=2.1.3,
 
     other-modules:
       Language.Javascript.JSaddle.Wasm.Internal.TH
